<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".HomeFragment">

        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:inputType="text"
                android:hint="@string/please_enter_some_text"
                android:ems="10"
                android:id="@+id/editTextText"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="476dp"
                app:layout_constraintEnd_toEndOf="parent"
                style="@android:style/TextAppearance.Medium"
                app:layout_constraintHorizontal_bias="0.497" />

        <Button
                android:text="@string/submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="25dp"
                app:layout_constraintTop_toBottomOf="@+id/imageView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.496"
                app:layout_constraintVertical_bias="0.467" />

        <ImageView
                android:contentDescription="@string/image_of_a_lottery_ticket"
                android:src="@drawable/lottery"
                android:layout_width="411dp"
                android:layout_height="287dp"
                android:id="@+id/imageView"
                android:layout_marginTop="72dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="68dp"
                android:layout_marginEnd="68dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.145" />

        <TextView
                android:text="@string/welcome_lottery_app_generator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/imageView"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintVertical_bias="0.196"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>